Contacts and cleanup loading flags to prevent out of order drawing.
