# TT-Dashboard-Microservice/TT-Dashboard-Microservice/ClientApp/swagger.json
@@ -541,6 +541,10 @@
           "name": {
             "type": "string",
             "nullable": true
+          },
+          "contactName": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
